<resources>
    <string name="app_name">InstaClone</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="user_s_image">User\'s image</string>
    <string name="username2">Username</string>
    <string name="password2">Password</string>
    <string name="text_favorites">Favorites</string>
    <string name="text_schedules">Schedules</string>
    <string name="text_music">Music</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="instagram_logo">Instagram logo</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="enter_new_username">Enter New Username</string>
    <string name="description">Description</string>
    <string name="take_picture">Take Picture</string>
    <string name="submit">Submit</string>
    <string name="this_is_the_preview_of_your_photo">This is the preview of your photo</string>
    <string name="sign_up_2">Sign Up!</string>
    <string name="a_picture_of_the_instagram_logo">A picture of the instagram logo</string>
</resources>